--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,5 @@ include_directories(${EIGEN_INCLUDE_DIRS})
 find_package(VTK 5.8 REQUIRED)
 include(${VTK_USE_FILE})
 
-add_executable(main src/main.cpp src/scanner.cpp src/agent.cpp src/proctor.cpp)
+add_executable(main src/main.cpp src/agent.cpp src/proctor.cpp src/scanner.cpp)
 target_link_libraries(main ${FLANN_LIBRARIES} ${PCL_COMMON_LIBRARIES} ${PCL_FEATURES_LIBRARIES} ${PCL_IO_LIBRARIES} vtkCommon vtkFiltering vtkGraphics vtkIO)
