--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR} /home/pabbeel/wh/pcl-t
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
-find_package(PCL 1.0 REQUIRED COMPONENTS common features filters io visualization)
+find_package(PCL 1.0 REQUIRED COMPONENTS common features keypoints io visualization)
 include_directories(${PCL_INCLUDE_DIRS})
 
 find_package(Eigen REQUIRED)
@@ -15,4 +15,4 @@ find_package(VTK 5.8 REQUIRED)
 include(${VTK_USE_FILE})
 
 add_executable(main src/main.cpp src/detector.cpp src/proctor.cpp src/scanner.cpp)
-target_link_libraries(main ${FLANN_LIBRARIES} ${PCL_COMMON_LIBRARIES} ${PCL_FEATURES_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_VISUALIZATION_LIBRARIES} vtkCommon vtkFiltering vtkGraphics vtkIO)
+target_link_libraries(main ${FLANN_LIBRARIES} ${PCL_COMMON_LIBRARIES} ${PCL_FEATURES_LIBRARIES} ${PCL_KEYPOINTS_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_VISUALIZATION_LIBRARIES} vtkCommon vtkFiltering vtkGraphics vtkIO)
